sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:3: error: ';' expected but '(' found.
  var lng: getValueCount();
                        ^